--- a/app/src/main/res/layout/activity_meal_planner.xml
+++ b/app/src/main/res/layout/activity_meal_planner.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:background="#FFFFFF"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,22 +11,47 @@
 
     <!-- Background image -->
     <ImageView
-        android:id="@+id/backgroundImage"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/imageView10"
+        android:layout_width="413dp"
+        android:layout_height="158dp"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_image" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="403dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="104dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img_shopping_list1" />
+        app:srcCompat="@drawable/iv_home_page_rectangle2" />
+
+
+
+    <ImageView
+        android:id="@+id/iv_home_page_rectangle4"
+        android:layout_width="360dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="27dp"
+        android:background="@drawable/iv_home_page_rectangle4"
+        android:scaleType="centerInside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Title -->
+
+    <!-- ScrollView for the day selection -->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="36dp"
         android:text="Choose a day"
         android:textColor="@android:color/black"
         android:textSize="30sp"
@@ -35,11 +61,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- ScrollView for the day selection -->
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="393dp"
+        android:layout_height="514dp"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@id/buttonDone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +89,8 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="58dp"
+                    android:background="#EAEAEA"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp">
@@ -73,6 +99,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:backgroundTint="#665C66"
                         android:gravity="center"
                         android:text="Sunday"
                         android:textColor="@android:color/black"
@@ -80,8 +107,8 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxSunday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="36dp"
+                        android:layout_height="30dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -97,6 +124,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#EAEAEA"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp">
@@ -112,8 +140,8 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxMonday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="31dp"
+                        android:layout_height="22dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -129,6 +157,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#EAEAEA"
+                    android:backgroundTint="#EAEAEA"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp">
@@ -144,8 +174,8 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxTuesday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="36dp"
+                        android:layout_height="21dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -161,6 +191,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#EAEAEA"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp">
@@ -176,8 +207,8 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxWednesday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="30dp"
+                        android:layout_height="24dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -193,6 +224,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#EAEAEA"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp">
@@ -208,8 +240,8 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxThursday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="30dp"
+                        android:layout_height="19dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -225,6 +257,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#EAEAEA"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp">
@@ -240,8 +273,8 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxFriday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="38dp"
+                        android:layout_height="24dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -257,6 +290,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#EAEAEA"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:padding="16dp">
@@ -272,8 +306,8 @@
 
                     <CheckBox
                         android:id="@+id/checkBoxSaturday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="35dp"
+                        android:layout_height="20dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -283,9 +317,9 @@
     <!-- Done Button -->
     <Button
         android:id="@+id/buttonDone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_width="119dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#808080"
         android:text="Done"
         app:layout_constraintBottom_toBottomOf="parent"
