--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="#DCD9DC"
+            android:backgroundTint="#4CAF50"
             android:text="Add to Shopping List"
             android:textColor="#000000" />
 
