--- a/app/src/main/res/layout/activity_meal_planner_meal.xml
+++ b/app/src/main/res/layout/activity_meal_planner_meal.xml
@@ -95,11 +95,14 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="7dp"
+        android:rotation="85"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_home_page_rectangle4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_back_ios" />
+        app:layout_constraintTop_toTopOf="@+id/iv_home_page_rectangle4"
+        app:srcCompat="@drawable/image_arrow_back_ios1" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
