--- a/app/src/main/res/layout/activity_notifications_page.xml
+++ b/app/src/main/res/layout/activity_notifications_page.xml
@@ -5,33 +5,58 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".NotificationsPage">
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="394dp"
-        android:layout_height="161dp"
-        android:layout_marginBottom="646dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="396dp"
+        android:layout_height="159dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/iv_home_page_image" />
+
+
+    <ImageView
+        android:id="@+id/ImgBack2"
+        android:layout_width="40dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="48dp"
+        android:rotation="85"
+        android:scaleType="centerInside"
+        android:src="@drawable/image_arrow_back_ios1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.105"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="403dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="104dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_rectangle2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="83dp"
+        android:layout_marginStart="119dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="121dp"
         android:text="Notifications"
+        android:textColor="#000000"
         android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
