--- a/app/src/main/res/layout/activity_edit_profile_page.xml
+++ b/app/src/main/res/layout/activity_edit_profile_page.xml
@@ -8,36 +8,18 @@
     android:layout_height="844dp"
     android:background="@drawable/container_edit_profile">
 
-    <ImageView
-        android:id="@+id/image_rectangle"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="321dp"
-        android:layout_marginBottom="772dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_view_rectangle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/ImgBack2"
-        android:layout_width="46dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="313dp"
-        android:layout_marginBottom="773dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/image_arrow_back_ios"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/btnBack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="44dp"
+        android:rotation="85"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/image_arrow_back_ios1" />
 
     <Button
         android:id="@+id/btnUpdateProfile"
