--- a/app/src/main/res/layout/activity_language_page.xml
+++ b/app/src/main/res/layout/activity_language_page.xml
@@ -5,130 +5,101 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LanguagePage">
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
+    android:foregroundTint="#FFFFFF">
+
+
+    <!-- Title -->
+
 
     <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="395dp"
-        android:layout_height="163dp"
-        android:layout_marginBottom="644dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageView10"
+        android:layout_width="396dp"
+        android:layout_height="159dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/iv_home_page_image" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="69dp"
-        android:layout_marginEnd="153dp"
-        android:layout_marginBottom="711dp"
-        android:text="Language"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="403dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="104dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_rectangle2" />
+
+    <ImageView
+        android:id="@+id/ImgBack2"
+        android:layout_width="41dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="20dp"
+        android:rotation="85"
+        android:scaleType="centerInside"
+        android:src="@drawable/image_arrow_back_ios1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <!-- Language Selection RadioGroup -->
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="248dp"
-        android:layout_marginEnd="278dp"
-        android:layout_marginBottom="540dp"
-        android:text="Suggested"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="56dp"
+        android:text="Language"
+        android:textColor="#020202"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.369"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView9"
+    <!-- Save Button -->
+
+
+    <RadioGroup
+        android:id="@+id/radioGroupLanguages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="296dp"
-        android:layout_marginEnd="301dp"
-        android:layout_marginBottom="492dp"
-        android:text="English"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView10">
 
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="357dp"
-        android:layout_height="2dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="338dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="467dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/blacklinehorizontal" />
+        <!-- English RadioButton -->
+        <RadioButton
+            android:id="@+id/rbtnEng"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="English" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="363dp"
-        android:layout_marginEnd="302dp"
-        android:layout_marginBottom="425dp"
-        android:text="Others"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!-- Afrikaans RadioButton -->
+        <RadioButton
+            android:id="@+id/rBtnAfr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Afrikaans" />
+    </RadioGroup>
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="416dp"
-        android:layout_marginEnd="286dp"
-        android:layout_marginBottom="372dp"
-        android:text="Afrikaans"
+    <Button
+        android:id="@+id/btnSaveLanguage"
+        android:layout_width="119dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="328dp"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <RadioButton
-        android:id="@+id/rbtnEng"
-        android:layout_width="29dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="314dp"
-        android:layout_marginTop="288dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="487dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <RadioButton
-        android:id="@+id/rBtnAfr"
-        android:layout_width="31dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="314dp"
-        android:layout_marginTop="407dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="365dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintHorizontal_bias="0.541"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
