--- a/app/src/main/res/layout/activity_meal_planner_meal.xml
+++ b/app/src/main/res/layout/activity_meal_planner_meal.xml
@@ -91,7 +91,7 @@
     <!-- Bottom Navigation -->
 
     <ImageView
-        android:id="@+id/backArrow"
+        android:id="@+id/btnBack"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
