--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -6,20 +6,39 @@
     android:id="@+id/container_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsPage">
+    tools:context=".SettingsPage"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
+    android:foregroundTint="#FFFFFF">
 
-    <!-- Header Image -->
-    <ImageView
-        android:id="@+id/imageViewSettingsHeader"
-        android:layout_width="0dp"
-        android:layout_height="159dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/iv_home_page_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+
+<!-- Header Image -->
 
     <!-- Title Text on top of Header Image -->
+
+    <ImageView
+        android:id="@+id/imageViewSettingsHeader"
+        android:layout_width="413dp"
+        android:layout_height="153dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_image" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="423dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="96dp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_search_results"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iv_home_page_rectangle2" />
+
     <TextView
         android:id="@+id/text_settings"
         android:layout_width="wrap_content"
@@ -175,15 +194,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:gravity="center_vertical"
+                    android:orientation="horizontal"
                     android:padding="16dp">
 
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        app:srcCompat="@drawable/ic_heroicons_scale"
-                        android:contentDescription="Convert Measurements Icon" />
+                        android:contentDescription="Convert Measurements Icon"
+                        app:srcCompat="@drawable/ic_heroicons_scale" />
 
                     <TextView
                         android:id="@+id/txtUOM"
