--- a/app/src/main/res/layout/activity_meal_planner.xml
+++ b/app/src/main/res/layout/activity_meal_planner.xml
@@ -96,6 +96,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/Sunday"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -130,6 +131,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/Monday"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -164,6 +166,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/Tuesday"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -197,6 +200,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/Wednesday"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -230,6 +234,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/Thursday"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -263,6 +268,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/Friday"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -296,6 +302,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/Saturday"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
