--- a/app/src/main/res/layout/activity_choose_time_page.xml
+++ b/app/src/main/res/layout/activity_choose_time_page.xml
@@ -93,6 +93,7 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:id="@+id/Breakfast"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -122,6 +123,7 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:id="@+id/Lunch"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -152,6 +154,7 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:id="@+id/Dinner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -181,6 +184,7 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:id="@+id/Snack"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
