--- a/app/src/main/res/layout/activity_meal_planner_page.xml
+++ b/app/src/main/res/layout/activity_meal_planner_page.xml
@@ -91,6 +91,7 @@
                 app:cardCornerRadius="12dp">
 
                 <TextView
+                    android:id="@+id/Monday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EAEAEA"
@@ -113,6 +114,7 @@
                 app:cardCornerRadius="12dp">
 
                 <TextView
+                    android:id="@+id/Tuesday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EAEAEA"
@@ -134,6 +136,7 @@
                 app:cardCornerRadius="12dp">
 
                 <TextView
+                    android:id="@+id/Wednesday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EAEAEA"
@@ -155,6 +158,7 @@
                 app:cardCornerRadius="12dp">
 
                 <TextView
+                    android:id="@+id/Thursday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EAEAEA"
@@ -176,6 +180,7 @@
                 app:cardCornerRadius="12dp">
 
                 <TextView
+                    android:id="@+id/Friday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EAEAEA"
@@ -197,6 +202,7 @@
                 app:cardCornerRadius="12dp">
 
                 <TextView
+                    android:id="@+id/Saturday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EAEAEA"
@@ -218,6 +224,7 @@
                 app:cardCornerRadius="12dp">
 
                 <TextView
+                    android:id="@+id/Sunday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#EAEAEA"
