--- a/app/src/main/res/layout/activity_conversions_page.xml
+++ b/app/src/main/res/layout/activity_conversions_page.xml
@@ -332,9 +332,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:backgroundTint="#DCD9DC"
+            android:backgroundTint="@color/colorPrimary"
             android:text="Apply"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView57" />
@@ -359,9 +359,9 @@
             android:layout_marginStart="40dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:backgroundTint="#DBD8DB"
+            android:backgroundTint="@color/colorPrimary"
             android:text="Metric"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toStartOf="@id/btnImperial"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView47" />
@@ -374,9 +374,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="40dp"
-            android:backgroundTint="#DCD9DC"
+            android:backgroundTint="@color/colorPrimary"
             android:text="Imperial"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btnMetric"
             app:layout_constraintTop_toBottomOf="@id/textView47" />
